@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>sci-astronomy</herd>
-<longdescription lang="en">
+  <herd>sci-astronomy</herd>
+  <longdescription lang="en">
   HEALPix is an acronym for Hierarchical Equal Area isoLatitude
   Pixelization of a sphere. As suggested in the name, this pixelization produces a
   subdivision of a spherical surface in which each pixel covers the same
   surface area as every other pixel. This package contains the IDL/GDL
   routines and plots.
 </longdescription>
+  <upstream>
+    <remote-id type="sourceforge">healpix_idl</remote-id>
+  </upstream>
 </pkgmetadata>
